refactor(core): Remove RxJava from ExecutionRepository interface (#2205)
* refactor(core): retrieve to not use RxJava in return type

* refactor(core): retrievePipelinesForApplication to not use RxJava in return type

* refactor(core): retrievePipelinesForPipelineConfigId to not use RxJava in return type

* refactor(core): retrieveOrchestrationsForApplication to not use RxJava in return type

* refactor(core): retrievePipelinesForApplication to not use RxJava in return type

* refactor(core): retrievePipelinesForPipelineConfigId to not use RxJava in return type

* Merge changes around pending execution